# med-extractor

./: .gitignore  extract_result.json  ir.json  out.json  pyproject.toml  readme.md  result.json  test.py  Архив ИЭМК v.4.universal.json
admin/: extract_router.py  main.py
extractor/: text_extractor.py
extractor/configs/: extractor_config.json
extractor/samples/: mini_example.html  osmotr.html  simple_example.html  АкопянСГ_history_0.html
ir_generator/: docker-compose.yml  ir_generator.py  upload_fts_data.py  utilities.py
ir_generator/configs/: fts_db_config.json
ir_generator/samples/: IR_Template.json
llm/server/: server.py
llm/server/configs/: Llama-3.1-Minitron-4B-Width-Base.json  gemma-3-4b-it.json
llm/train/: download_adapter.py  my_dataset.py  train.py  upload_adapter.py
llm/train/configs/: Llama-3.1-Minitron-4B-Width-Base.json
llm/train/dataset/: train.json  val.json
