[project]
name = "med-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.45.5",
    "bs4>=0.0.2",
    "datasets>=3.6.0",
    "flask>=3.1.1",
    "flask-restful>=0.3.10",
    "huggingface-hub>=0.31.2",
    "peft>=0.15.2",
    "pyodbc>=5.2.0",
    "regex>=2024.11.6",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.0",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "trl==0.9.6",
]
